[gd_scene load_steps=4 format=3 uid="uid://t8p4xa8p0pby"]

[ext_resource type="Script" uid="uid://cmbri0y5d4q0f" path="res://Scripts/player3d.gd" id="1_abc123"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[node name="Player3D" type="CharacterBody3D"]
script = ExtResource("1_abc123")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.525531, 0.850775, 0, -0.850775, 0.525531, 0, 4.62762, 2.04864)

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
billboard = 1
text = "Player"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -60.0
value = 100.0

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
